compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unsupported_nested_constructor_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unsupported_nested_constructor_pattern.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported nested constructor pattern
   ╭─[tests/fixtures/diagnostics/types/unsupported_nested_constructor_pattern.ml:6:5]
 5 │   dbg(match value {
 6 │     Result.Ok.extra(x) -> x,
   ·     ─────────┬────────
   ·              ╰── stage0 can resolve two-segment imported constructors, but `Result.Ok.extra` has more segments
 7 │     _ -> 0
   ╰────
  help: use a local constructor or a two-segment imported constructor path
