compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_variant_payload_type_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/variant_payload_type_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × variant payload type mismatch
   ╭─[tests/fixtures/diagnostics/types/variant_payload_type_mismatch.ml:4:12]
 3 │ fn main() {
 4 │   dbg(Some("nope"))
   ·            ───┬──
   ·               ╰── `Some` expects `i64`, but this payload has type `string`
 5 │ }
   ╰────
  help: construct the variant with a payload of the declared type
