compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_while_body_unknown_value.snap
---
source: tests/fixtures.rs
assertion_line: 5032
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/while_body_unknown_value.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown value
   ╭─[tests/fixtures/diagnostics/types/while_body_unknown_value.ml:3:5]
 2 │   while false {
 3 │     missing_value
   ·     ──────┬──────
   ·           ╰── `missing_value` is not bound in this scope
 4 │   };
   ╰────
  help: bind the value with `let` before using it
